Closed Bug 1906034 Opened 1 year ago Closed 1 year ago

macOS dialog windows missing titlebar after bug 1887063

Categories

(Core :: Widget: Cocoa, defect)

Firefox 126
defect

Tracking

()

VERIFIED FIXED
129 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox-esr128 --- verified
firefox127 --- wontfix
firefox128 --- wontfix
firefox129 --- verified

People

(Reporter: sam, Assigned: sam)

References

(Regression)

Details

(Keywords: regression)

Attachments

(3 files)

After bug 1887063, dialog windows on macOS show the window background under the window title, instead of showing the system titlebar and separator.

Rather than always hiding the titlebar for ToolbarWindows, conditionally show it if we are not drawing into it.

Assignee: nobody → sam
Status: NEW → ASSIGNED

Set release status flags based on info from the regressing bug 1887063

Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a623390b9ae5 Show macOS titlebar if we are not drawing into it. r=mac-reviewers,spohl
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 129 Branch

The patch landed in nightly and beta is affected.
:sam, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox128 to wontfix.

For more information, please visit BugBot documentation.

Flags: needinfo?(sam)
Flags: needinfo?(sam)
Flags: qe-verify+
Attached image Nightly images.jpg

Not sure if this is the change from this fix but I notice that the in the Fixed Nightly build there is a clear separator between the TitleBar and the TabBar and the TitleBar theme difference between the Affected Nightly and the Fixed one. Can you please clarify that this is the correct or wrong place to look for what changed with the fix?

Affected Nightly - Nightly without the fix - Top of the image
Fixed Nightly - Nightly with the fix - Bottom of the image

Flags: needinfo?(sam)

(In reply to Bogdan Maris, Desktop QA from comment #6)

Created attachment 9416303 [details]
Nightly images.jpg

Not sure if this is the change from this fix but I notice that the in the Fixed Nightly build there is a clear separator between the TitleBar and the TabBar and the TitleBar theme difference between the Affected Nightly and the Fixed one. Can you please clarify that this is the correct or wrong place to look for what changed with the fix?

Affected Nightly - Nightly without the fix - Top of the image
Fixed Nightly - Nightly with the fix - Bottom of the image

Hi! Yes, that is the change from this fix.

Flags: needinfo?(sam)

(In reply to Sam Johnson from comment #7)

Hi! Yes, that is the change from this fix.

Thank you very much! I also verified that this is fixed on the latest Firefox 129 beta from treeherder using macOS 13.6. Leaving the status of the bug as Resolved fixed for now until a decision is made for Firefox esr128.

Please nominate this for ESR128 approval. It grafts cleanly.

Flags: needinfo?(sam)

Rather than always hiding the titlebar for ToolbarWindows, conditionally show it if we are not drawing into it.

Original Revision: https://phabricator.services.mozilla.com/D215586

Attachment #9419833 - Flags: approval-mozilla-esr128?

esr128 Uplift Approval Request

  • User impact if declined: Firefox windows on macOS will be missing the titlebar background and separator
  • Code covered by automated testing: no
  • Fix verified in Nightly: yes
  • Needs manual QE test: yes
  • Steps to reproduce for manual QE testing: See bug 1906034 comment 6
  • Risk associated with taking this patch: Low
  • Explanation of risk level: Minor change to code that is used by all windows, so any regressions would have been obvious.
  • String changes made/needed: None
  • Is Android affected?: no
Flags: needinfo?(sam)
Attachment #9419833 - Flags: approval-mozilla-esr128? → approval-mozilla-esr128+

(In reply to Bogdan Maris, Desktop Test Engineering from comment #8)

(In reply to Sam Johnson from comment #7)

Hi! Yes, that is the change from this fix.

Thank you very much! I also verified that this is fixed on the latest Firefox 129 beta from treeherder using macOS 13.6. Leaving the status of the bug as Resolved fixed for now until a decision is made for Firefox esr128.

Also verified as fixed using Firefox 128.2.0esr on macOS 13.6.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
Regressions: 1912338
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: