Bug 1906034 - Show macOS titlebar if we are not drawing into it. r=mac-reviewers,spohl

Rather than always hiding the titlebar for ToolbarWindows, conditionally show it if we are not drawing into it.

Differential Revision: https://phabricator.services.mozilla.com/D215586